UI overflow fix -- clean up

--- a/playground/styles/ui.css
+++ b/playground/styles/ui.css
@@ -5,6 +5,10 @@
  *    Author: Pouya Kary <k@karyfoundation.org>
  */
 
+html {
+	overflow: hidden;
+}
+
 body {
 	background-color: #9A9A9A;
 	padding: 			0px;
